// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Secret Details File Secret 1`] = `
<div>
  <div
    class="Layout---horizontal--3rmQ StyledProps---main--1Wws container standard StyledProps---flex--2Jz8 StyledProps---padding-left-large--28UT StyledProps---padding-right-large--2vF9"
  >
    <div
      class="Layout---vertical--3Szv StyledProps---main--1Wws"
    >
      <div>
        <a
          href="/account/dummy/admin/organizations/dummy/resources/connectors"
        >
          Resources
        </a>
         /
         
        <a
          href="/account/dummy/admin/organizations/dummy/resources/secrets"
        >
          Secrets
        </a>
      </div>
      <p
        class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-medium--aOY7 StyledProps---color--8PuS StyledProps---color-black--2kJn"
      >
        abhi-file-1
      </p>
    </div>
  </div>
  <div
    class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---padding-large--26zZ"
  >
    <div
      class="switch"
    >
      <div
        class="item selected"
      >
        Visual
      </div>
      <div
        class="item"
      >
        YAML
      </div>
    </div>
    <div
      class="Layout---horizontal--3rmQ Layout---layout-spacing-medium--3-Y8 StyledProps---main--1Wws StyledProps---margin-bottom-large--1jL3 StyledProps---margin-top-large--1oBg"
      style="align-items: center;"
    >
      <p
        class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-medium--aOY7 StyledProps---color--8PuS StyledProps---color-black--2kJn"
      >
        Secret Details
      </p>
      <button
        class="bp3-button StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws"
        type="button"
      >
        <span
          class="bp3-icon bp3-icon-edit StyledProps---main--1Wws StyledProps---padding-right-xsmall--3D04"
          icon="edit"
        >
          <svg
            data-icon="edit"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              edit
            </desc>
            <path
              d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="bp3-button-text"
        >
          Edit Details
        </span>
      </button>
    </div>
    <div
      class="Layout---horizontal--3rmQ StyledProps---main--1Wws"
    >
      <div
        class="Layout---vertical--3Szv Layout---layout-spacing-large--3HvX StyledProps---main--1Wws"
        style="width: 50%;"
      >
        <div>
          <p
            class="StyledProps---font--2ipy StyledProps---main--1Wws"
          >
            Secret Name
          </p>
          <p
            class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-black--2kJn"
          >
            abhi-file-1
          </p>
        </div>
        <div>
          <p
            class="StyledProps---font--2ipy StyledProps---main--1Wws"
          >
            Secret Type
          </p>
          <p
            class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-black--2kJn"
          >
            File
          </p>
        </div>
        <div>
          <p
            class="StyledProps---font--2ipy StyledProps---main--1Wws"
          >
            Secret Value
          </p>
          <p
            class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-grey350--3j5q"
          >
            encrypted file
          </p>
        </div>
        <div>
          <p
            class="StyledProps---font--2ipy StyledProps---main--1Wws"
          >
            Secrets Manager
          </p>
          <p
            class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-black--2kJn"
          >
            harnessSecretManager
          </p>
        </div>
        <div>
          <p
            class="StyledProps---font--2ipy StyledProps---main--1Wws"
          >
            Description
          </p>
          <p
            class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-black--2kJn"
          >
            file
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Secret Details SSH Secret with Key: view ssh 1`] = `
<div>
  <div
    class="Layout---horizontal--3rmQ StyledProps---main--1Wws container standard StyledProps---flex--2Jz8 StyledProps---padding-left-large--28UT StyledProps---padding-right-large--2vF9"
  >
    <div
      class="Layout---vertical--3Szv StyledProps---main--1Wws"
    >
      <div>
        <a
          href="/account/dummy/admin/resources/connectors"
        >
          Resources
        </a>
         /
         
        <a
          href="/account/dummy/admin/resources/secrets"
        >
          Secrets
        </a>
      </div>
      <p
        class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-medium--aOY7 StyledProps---color--8PuS StyledProps---color-black--2kJn"
      >
        abhi-ssh1
      </p>
    </div>
  </div>
  <div
    class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---padding-large--26zZ"
  >
    <div
      class="switch"
    >
      <div
        class="item selected"
      >
        Visual
      </div>
      <div
        class="item"
      >
        YAML
      </div>
    </div>
    <div
      class="Layout---horizontal--3rmQ Layout---layout-spacing-medium--3-Y8 StyledProps---main--1Wws StyledProps---margin-bottom-large--1jL3 StyledProps---margin-top-large--1oBg"
      style="align-items: center;"
    >
      <p
        class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-medium--aOY7 StyledProps---color--8PuS StyledProps---color-black--2kJn"
      >
        Secret Details
      </p>
      <button
        class="bp3-button StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws"
        type="button"
      >
        <span
          class="bp3-icon bp3-icon-edit StyledProps---main--1Wws StyledProps---padding-right-xsmall--3D04"
          icon="edit"
        >
          <svg
            data-icon="edit"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              edit
            </desc>
            <path
              d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="bp3-button-text"
        >
          Edit Details
        </span>
      </button>
    </div>
    <div
      class="Layout---horizontal--3rmQ StyledProps---main--1Wws"
    >
      <div
        class="Layout---vertical--3Szv Layout---layout-spacing-large--3HvX StyledProps---main--1Wws"
        style="width: 50%;"
      >
        <div>
          <p
            class="StyledProps---font--2ipy StyledProps---main--1Wws"
          >
            Secret Name
          </p>
          <p
            class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-black--2kJn"
          >
            abhi-ssh1
          </p>
        </div>
        <div>
          <p
            class="StyledProps---font--2ipy StyledProps---main--1Wws"
          >
            Secret Type
          </p>
          <p
            class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-black--2kJn"
          >
            Execution Credential
          </p>
        </div>
        <div>
          <p
            class="StyledProps---font--2ipy StyledProps---main--1Wws"
          >
            Authentication
          </p>
          <p
            class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-black--2kJn"
          >
            SSH
          </p>
        </div>
        <div>
          <p
            class="StyledProps---font--2ipy StyledProps---main--1Wws"
          >
            Credential Type
          </p>
          <p
            class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-black--2kJn"
          >
            Username/SSH Key
          </p>
        </div>
        <div>
          <p
            class="StyledProps---font--2ipy StyledProps---main--1Wws"
          >
            Username
          </p>
          <p
            class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-black--2kJn"
          >
            abhinav
          </p>
        </div>
        <div>
          <p
            class="StyledProps---font--2ipy StyledProps---main--1Wws"
          >
            Key Reference
          </p>
          <p
            class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-black--2kJn"
          >
            account.abhifile2
          </p>
        </div>
        <div>
          <p
            class="StyledProps---font--2ipy StyledProps---main--1Wws"
          >
            Passphrase (optional)
          </p>
          <p
            class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-grey350--3j5q"
          >
            account.abhitest1
          </p>
        </div>
        <div>
          <p
            class="StyledProps---font--2ipy StyledProps---main--1Wws"
          >
            Description
          </p>
          <p
            class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-black--2kJn"
          >
            desc
          </p>
        </div>
      </div>
      <div
        class="Layout---vertical--3Szv Layout---layout-spacing-xxxlarge--9W0D StyledProps---main--1Wws StyledProps---border--uz_- StyledProps---border-left--3J5s StyledProps---padding-left-xxxlarge--37cM"
        style="width: 50%;"
      >
        <div
          class="Layout---vertical--3Szv Layout---layout-spacing-large--3HvX StyledProps---main--1Wws stats"
        >
          <div
            class="Layout---horizontal--3rmQ Layout---layout-spacing-large--3HvX StyledProps---main--1Wws nameValueItem"
          >
            <span
              class="name"
            >
              Connector created
            </span>
            <span
              class="value"
            >
              10/12/2020 02:26 pm
            </span>
          </div>
          <div
            class="Layout---horizontal--3rmQ Layout---layout-spacing-large--3HvX StyledProps---main--1Wws nameValueItem"
          >
            <span
              class="name"
            >
              Last updated
            </span>
            <span
              class="value"
            >
              10/12/2020 02:26 pm
            </span>
          </div>
        </div>
        <div
          class="StyledProps---font--2ipy StyledProps---main--1Wws"
          style="width: 300px;"
        >
          <div
            class="OverlaySpinner---overlaySpinner--3Bs3"
          >
            <form
              class="FormikForm---main--1N87"
            >
              <div>
                <div
                  class="bp3-form-group"
                  data-id="host-0"
                >
                  <label
                    class="bp3-label"
                    for="host"
                  >
                    Add a Host Name to start verification
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="host"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
                <p
                  class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-xsmall--1f9b StyledProps---font-weight-bold--22XZ"
                >
                  THIS URL WILL ONLY BE USED FOR VERIFICATION PROCESS
                </p>
                <button
                  class="bp3-button StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws StyledProps---margin-top-medium--1XOJ"
                  style="font-size: smaller;"
                  type="submit"
                >
                  <span
                    class="bp3-button-text"
                  >
                    TEST CONNECTION
                  </span>
                </button>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Secret Details Text Secret: edit text 1`] = `
<div>
  <div
    class="Layout---horizontal--3rmQ StyledProps---main--1Wws container standard StyledProps---flex--2Jz8 StyledProps---padding-left-large--28UT StyledProps---padding-right-large--2vF9"
  >
    <div
      class="Layout---vertical--3Szv StyledProps---main--1Wws"
    >
      <div>
        <a
          href="/account/dummy/admin/resources/connectors"
        >
          Resources
        </a>
         /
         
        <a
          href="/account/dummy/admin/resources/secrets"
        >
          Secrets
        </a>
      </div>
      <p
        class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-medium--aOY7 StyledProps---color--8PuS StyledProps---color-black--2kJn"
      >
        abhi-test-1
      </p>
    </div>
  </div>
  <div
    class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---padding-large--26zZ"
  >
    <div
      class="switch"
    >
      <div
        class="item selected"
      >
        Visual
      </div>
      <div
        class="item"
      >
        YAML
      </div>
    </div>
    <div
      class="Layout---horizontal--3rmQ Layout---layout-spacing-medium--3-Y8 StyledProps---main--1Wws StyledProps---margin-bottom-large--1jL3 StyledProps---margin-top-large--1oBg"
      style="align-items: center;"
    >
      <p
        class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-medium--aOY7 StyledProps---color--8PuS StyledProps---color-black--2kJn"
      >
        Secret Details
      </p>
    </div>
    <div
      class="StyledProps---font--2ipy StyledProps---main--1Wws"
    >
      <div
        class="StyledProps---font--2ipy StyledProps---main--1Wws"
        style="width: 400px;"
      >
        <div
          class="OverlaySpinner---overlaySpinner--3Bs3"
        >
          <form
            class="FormikForm---main--1N87"
          >
            <div>
              <div
                class="bp3-form-group bp3-disabled"
                data-id="secretManagerIdentifier-0"
              >
                <label
                  class="bp3-label"
                  for="secretManagerIdentifier"
                >
                  Secrets Manager*
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-popover-wrapper Select---main--1QpB bp3-fill"
                  >
                    <div
                      class="bp3-popover-target"
                    >
                      <div
                        class="bp3-input-group bp3-disabled"
                      >
                        <input
                          autocomplete="off"
                          class="bp3-input"
                          disabled=""
                          name="secretManagerIdentifier"
                          placeholder="Search..."
                          style="padding-right: 0px;"
                          type="text"
                          value=""
                        />
                        <span
                          class="bp3-input-action"
                        >
                          <span
                            class="bp3-icon bp3-icon-caret-down StyledProps---main--1Wws StyledProps---padding-small--3f0A"
                            icon="caret-down"
                          >
                            <svg
                              data-icon="caret-down"
                              height="14"
                              viewBox="0 0 16 16"
                              width="14"
                            >
                              <desc>
                                caret-down
                              </desc>
                              <path
                                d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="InputWithIdentifier---txtNameContainer--20iZ"
              >
                <div
                  class="Layout---horizontal--3rmQ StyledProps---main--1Wws InputWithIdentifier---txtIdContainer--2Ozd"
                >
                  <p
                    class="StyledProps---font--2ipy StyledProps---main--1Wws"
                  >
                    ID
                    :
                  </p>
                  <span
                    class="InputWithIdentifier---idInput--w8_T"
                    contenteditable="false"
                    disabled=""
                  >
                    abhitest1
                  </span>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="name-1"
                >
                  <label
                    class="bp3-label"
                    for="name"
                  >
                    Secret Name*
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="name"
                        type="text"
                        value="abhi-test-1"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <p
                class="StyledProps---font--2ipy StyledProps---main--1Wws"
              >
                Please select a Secret Manager
              </p>
              <button
                class="bp3-button bp3-disabled StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws StyledProps---intent-primary--2Xgi StyledProps---margin-top-large--1oBg"
                disabled=""
                tabindex="-1"
                type="submit"
              >
                <span
                  class="bp3-button-text"
                >
                  Save
                </span>
              </button>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Secret Details Text Secret: view text 1`] = `
<div>
  <div
    class="Layout---horizontal--3rmQ StyledProps---main--1Wws container standard StyledProps---flex--2Jz8 StyledProps---padding-left-large--28UT StyledProps---padding-right-large--2vF9"
  >
    <div
      class="Layout---vertical--3Szv StyledProps---main--1Wws"
    >
      <div>
        <a
          href="/account/dummy/admin/resources/connectors"
        >
          Resources
        </a>
         /
         
        <a
          href="/account/dummy/admin/resources/secrets"
        >
          Secrets
        </a>
      </div>
      <p
        class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-medium--aOY7 StyledProps---color--8PuS StyledProps---color-black--2kJn"
      >
        abhi-test-1
      </p>
    </div>
  </div>
  <div
    class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---padding-large--26zZ"
  >
    <div
      class="switch"
    >
      <div
        class="item selected"
      >
        Visual
      </div>
      <div
        class="item"
      >
        YAML
      </div>
    </div>
    <div
      class="Layout---horizontal--3rmQ Layout---layout-spacing-medium--3-Y8 StyledProps---main--1Wws StyledProps---margin-bottom-large--1jL3 StyledProps---margin-top-large--1oBg"
      style="align-items: center;"
    >
      <p
        class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-size-medium--aOY7 StyledProps---color--8PuS StyledProps---color-black--2kJn"
      >
        Secret Details
      </p>
      <button
        class="bp3-button StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws"
        type="button"
      >
        <span
          class="bp3-icon bp3-icon-edit StyledProps---main--1Wws StyledProps---padding-right-xsmall--3D04"
          icon="edit"
        >
          <svg
            data-icon="edit"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              edit
            </desc>
            <path
              d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="bp3-button-text"
        >
          Edit Details
        </span>
      </button>
    </div>
    <div
      class="Layout---horizontal--3rmQ StyledProps---main--1Wws"
    >
      <div
        class="Layout---vertical--3Szv Layout---layout-spacing-large--3HvX StyledProps---main--1Wws"
        style="width: 50%;"
      >
        <div>
          <p
            class="StyledProps---font--2ipy StyledProps---main--1Wws"
          >
            Secret Name
          </p>
          <p
            class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-black--2kJn"
          >
            abhi-test-1
          </p>
        </div>
        <div>
          <p
            class="StyledProps---font--2ipy StyledProps---main--1Wws"
          >
            Secret Type
          </p>
          <p
            class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-black--2kJn"
          >
            Text
          </p>
        </div>
        <div>
          <p
            class="StyledProps---font--2ipy StyledProps---main--1Wws"
          >
            Secret Value
          </p>
          <p
            class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-grey350--3j5q"
          >
            encrypted
          </p>
        </div>
        <div>
          <p
            class="StyledProps---font--2ipy StyledProps---main--1Wws"
          >
            Secrets Manager
          </p>
          <p
            class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-black--2kJn"
          >
            Vault1
          </p>
        </div>
        <div>
          <p
            class="StyledProps---font--2ipy StyledProps---main--1Wws"
          >
            Description
          </p>
          <p
            class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-black--2kJn"
          >
            asd
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
